tests/golden/errors/unused_import.kso
import "std/json"

print "no json here"
